Fix typo in GitHub Actions workflow OS version

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,7 +63,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-lateset
+          - ubuntu-latest
         remove-android:
           - 'true'
           - 'false'
